shift it down by 1 px to prevent cliping

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -146,7 +146,7 @@ ul.navbar-main .dropdown-content::after {
   position: absolute;
   bottom: 100%;
   left: 50%;
-  margin-bottom: 2px;
+  margin-bottom: 1px;
   margin-left: -8px;
   border-width: 8px;
   border-style: solid;
